@@ -1,0 +1,89 @@
+/^Project-Id-Version:/ b
+/^Report-Msgid-Bugs-To:/ b
+/^POT-Creation-Date:/ b
+/^PO-Revision-Date:/ b
+/^Last-Translator:/ b
+/^Language-Team:/ b
+/^Language:/ b
+/^MIME-Version:/ b
+/^Content-Type:/ b
+/^Content-Transfer-Encoding:/ b
+/^Plural-Forms:/ b
+
+s,%\([0-9]*\)C,%\1#,g
+
+s,a,א,g
+s,b,בּ,g
+s,c,צ,g
+s,d,ד,g
+s,e,ע,g
+s,f,פֿ,g
+s,g,ג,g
+s,h,ה,g
+s,i,ִי,g
+s,j,י,g
+s,k,כּ,g
+s,l,ל,g
+s,m,מ,g
+s,n,נ,g
+s,o,וֹ,g
+s,p,פּ,g
+s,q,ק,g
+s,r,ר,g
+s,s,ש,g
+s,t,ת,g
+s,u,וּ,g
+s,v,בֿ,g
+s,w,ו,g
+s,x,כּס,g
+s,y,יִ,g
+s,z,ז,g
+s,ü,ֻ,g
+s,ä,ֶ,g
+s,ö,ֵ,g
+s,ß,סס,g
+
+s,A,א,g
+s,B,בּ,g
+s,C,צ,g
+s,D,ד,g
+s,E,ע,g
+s,F,פֿ,g
+s,G,ג,g
+s,H,ה,g
+s,I,ִי,g
+s,J,י,g
+s,K,כּ,g
+s,L,ל,g
+s,M,מ,g
+s,N,נ,g
+s,O,וֹ,g
+s,P,פּ,g
+s,Q,ק,g
+s,R,ר,g
+s,S,ש,g
+s,T,ת,g
+s,U,וּ,g
+s,V,בֿ,g
+s,W,ו,g
+s,X,כּס,g
+s,Y,יִ,g
+s,Z,ז,g
+s,Ü,ֻ,g
+s,Ä,ֶ,g
+s,Ö,ֵ,g
+s,ß,סס,g
+
+s,%\([0-9]*\)#,%\1C,g
+s,%\([0-9]*\)צ,%\1c,g
+s,%\([0-9]*\)ד,%\1d,g
+s,%\([0-9]*\)לד,%\1ld,g
+s,%\([0-9]*\)ללד,%\1lld,g
+
+s,%\([0-9\.\*]*\)ש,%\1s,g
+s,%\([0-9]*\)לוּ,%\1lu,g
+s,%\([0-9]*\)וּ,%\1u,g
+s,%\([0-9]*\)ללוּ,%\1llu,g
+s,%\([0-9]*\)כּס,%\1x,g
+s,%\([0-9]*\)לכּס,%\1lx,g
+s,%\([0-9]*\)ללכּס,%\1llx,g
